--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetUpgrade_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetUpgrade_example.json
@@ -3,11 +3,7 @@
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
-    "nodeTypeName": "BE",
-    "api-version": "2023-09-01-preview",
-    "parameters": {
-      "updateType": "ByUpgradeDomain"
-    }
+    "applicationName": "myApp"
   },
   "responses": {
     "202": {
