--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetHealth_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetHealth_example.json
@@ -3,11 +3,13 @@
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
-    "nodeTypeName": "BE",
+    "applicationName": "myApp",
     "api-version": "2023-09-01-preview",
-    "parameters": {
-      "updateType": "ByUpgradeDomain"
-    }
+    "eventsHealthStateFilterOptionalQueryParam": 2,
+    "deployedApplicationsHealthStateFilterOptionalQueryParam": 2,
+    "servicesHealthStateFilterOptionalQueryParam": 4,
+    "excludeHealthStatisticsOptionalQueryParam": 2,
+    "timeoutOptionalQueryParam": 4
   },
   "responses": {
     "202": {
