--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationPutOperation_example_max.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationPutOperation_example_max.json
@@ -24,13 +24,16 @@
               "maxPercentUnhealthyPartitionsPerService": 0,
               "maxPercentUnhealthyReplicasPerPartition": 0
             },
-            "serviceTypeHealthPolicyMap": {
-              "myService": {
-                "maxPercentUnhealthyReplicasPerPartition": 30,
-                "maxPercentUnhealthyPartitionsPerService": 30,
-                "maxPercentUnhealthyServices": 30
+            "serviceTypeHealthPolicyMap": [
+              {
+                "key": "service1",
+                "value": {
+                  "maxPercentUnhealthyReplicasPerPartition": 30,
+                  "maxPercentUnhealthyPartitionsPerService": 30,
+                  "maxPercentUnhealthyServices": 30
+                }
               }
-            }
+            ]
           },
           "rollingUpgradeMonitoringPolicy": {
             "failureAction": "Rollback",
@@ -75,13 +78,16 @@
                 "maxPercentUnhealthyPartitionsPerService": 0,
                 "maxPercentUnhealthyReplicasPerPartition": 0
               },
-              "serviceTypeHealthPolicyMap": {
-                "service1": {
-                  "maxPercentUnhealthyReplicasPerPartition": 30,
-                  "maxPercentUnhealthyPartitionsPerService": 30,
-                  "maxPercentUnhealthyServices": 30
+              "serviceTypeHealthPolicyMap": [
+                {
+                  "key": "service1",
+                  "value": {
+                    "maxPercentUnhealthyReplicasPerPartition": 30,
+                    "maxPercentUnhealthyPartitionsPerService": 30,
+                    "maxPercentUnhealthyServices": 30
+                  }
                 }
-              }
+              ]
             },
             "rollingUpgradeMonitoringPolicy": {
               "failureAction": "Rollback",
@@ -127,13 +133,16 @@
                 "maxPercentUnhealthyPartitionsPerService": 0,
                 "maxPercentUnhealthyReplicasPerPartition": 0
               },
-              "serviceTypeHealthPolicyMap": {
-                "service1": {
-                  "maxPercentUnhealthyReplicasPerPartition": 30,
-                  "maxPercentUnhealthyPartitionsPerService": 30,
-                  "maxPercentUnhealthyServices": 30
+              "serviceTypeHealthPolicyMap": [
+                {
+                  "key": "service1",
+                  "value": {
+                    "maxPercentUnhealthyReplicasPerPartition": 30,
+                    "maxPercentUnhealthyPartitionsPerService": 30,
+                    "maxPercentUnhealthyServices": 30
+                  }
                 }
-              }
+              ]
             },
             "rollingUpgradeMonitoringPolicy": {
               "failureAction": "Rollback",
