Added enrollmentAccounts and departments API in BillingRoleDefinitions and BillingPermissions APIs and model corrections

--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/billingRoleAssignment.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/billingRoleAssignment.json
@@ -542,6 +542,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "The list of role assignments.",
+            "schema": {
+              "$ref": "#/definitions/BillingRoleAssignmentListResult"
+            }
+          },
           "202": {
             "description": "The list of role assignments.",
             "schema": {
@@ -861,6 +867,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "The list of role assignments.",
+            "schema": {
+              "$ref": "#/definitions/BillingRoleAssignmentListResult"
+            }
+          },
           "202": {
             "description": "The list of role assignments.",
             "schema": {
@@ -924,6 +936,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "The list of role assignments.",
+            "schema": {
+              "$ref": "#/definitions/BillingRoleAssignmentListResult"
+            }
+          },
           "202": {
             "description": "The list of role assignments.",
             "schema": {
@@ -1712,6 +1730,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "The list of role assignments.",
+            "schema": {
+              "$ref": "#/definitions/BillingRoleAssignmentListResult"
+            }
+          },
           "202": {
             "description": "The list of role assignments.",
             "schema": {
