--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/resolveBillingRoleAssignmentByCustomer.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/resolveBillingRoleAssignmentByCustomer.json
@@ -13,7 +13,7 @@
             "id": "30000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "name": "30000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "properties": {
-              "createdOn": "2023-09-11T20:12:26.9455695+00:00",
+              "createdOn": "2023-09-13T03:31:39.6217864+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
@@ -30,7 +30,7 @@
             "id": "30000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "name": "30000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "properties": {
-              "createdOn": "2023-09-11T20:12:26.9456271+00:00",
+              "createdOn": "2023-09-13T03:31:39.621833+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
@@ -53,7 +53,7 @@
             "id": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "name": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "properties": {
-              "createdOn": "2023-09-11T20:12:26.9456304+00:00",
+              "createdOn": "2023-09-13T03:31:39.6218344+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
@@ -70,7 +70,7 @@
             "id": "10000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "name": "10000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "properties": {
-              "createdOn": "2023-09-11T20:12:26.9456307+00:00",
+              "createdOn": "2023-09-13T03:31:39.6218347+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
@@ -86,7 +86,7 @@
         ]
       },
       "headers": {
-        "location": "https://management.azure.com/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/customers/703ab484-dda2-4402-827b-a74513b61e2d/operationResults/resolveBillingRoleAssignments_10000000-0000-0000-0000-000000000001?api-version=2023-04-01",
+        "location": "https://management.azure.com/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/xxxx-xxxx-xxx-xxx/customers/703ab484-dda2-4402-827b-a74513b61e2d/operationResults/resolveBillingRoleAssignments_10000000-0000-0000-0000-000000000001?api-version=2023-04-01",
         "retry-after": "5"
       }
     }
