--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentCreateByBillingProfile.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentCreateByBillingProfile.json
@@ -6,20 +6,21 @@
     "parameters": {
       "principalId": "00000000-0000-0000-0000-000000000000",
       "principalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
-      "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB/billingRoleDefinition/10000000-aaaa-bbbb-cccc-100000000000",
+      "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB/billingRoleDefinitions/10000000-aaaa-bbbb-cccc-100000000000",
       "userEmailAddress": "john@contoso.com"
     }
   },
   "responses": {
-    "200": {
+    "201": {
       "body": {
         "id": "10000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
         "name": "10000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
         "properties": {
-          "createdOn": "2023-09-11T20:39:07.4400002+00:00",
+          "createdOn": "2023-09-13T03:31:39.6054665+00:00",
           "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
           "createdByPrincipalId": "47309529-17e6-4104-b9e8-39f62fa1e5ed",
           "principalId": "00000000-0000-0000-0000-000000000000",
+          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingRoleDefinitions/10000000-aaaa-bbbb-cccc-100000000000",
           "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB",
           "principalType": "User"
         },
@@ -30,7 +31,8 @@
       "body": {
         "properties": {
           "principalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
-          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingRoleDefinition/10000000-aaaa-bbbb-cccc-100000000000",
+          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingRoleDefinitions/10000000-aaaa-bbbb-cccc-100000000000",
+          "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB",
           "userEmailAddress": "john@contoso.com",
           "permissionRequestId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/permissionRequests/{permissionRequestName}"
         },
