--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentCreateByCustomer.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentCreateByCustomer.json
@@ -7,20 +7,21 @@
     "parameters": {
       "principalId": "00000000-0000-0000-0000-000000000000",
       "principalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
-      "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d/billingRoleDefinition/30000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
+      "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d/billingRoleDefinitions/30000000-aaaa-bbbb-cccc-100000000000",
       "userEmailAddress": "john@contoso.com"
     }
   },
   "responses": {
-    "200": {
+    "201": {
       "body": {
         "id": "30000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
         "name": "30000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
         "properties": {
-          "createdOn": "2023-09-11T20:39:07.440985+00:00",
+          "createdOn": "2023-09-13T03:31:39.6069461+00:00",
           "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
           "createdByPrincipalId": "47309529-17e6-4104-b9e8-39f62fa1e5ed",
           "principalId": "00000000-0000-0000-0000-000000000000",
+          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d/billingRoleDefinitions/30000000-aaaa-bbbb-cccc-100000000000",
           "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d",
           "principalType": "User"
         },
@@ -31,7 +32,8 @@
       "body": {
         "properties": {
           "principalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
-          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingRoleDefinition/30000000-aaaa-bbbb-cccc-100000000000_00000000-0000-0000-0000-000000000000",
+          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d/billingRoleDefinitions/10000000-aaaa-bbbb-cccc-100000000000",
+          "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfileName/BKM6-54VH-BG7-PGB/customers/703ab484-dda2-4402-827b-a74513b61e2d",
           "userEmailAddress": "john@contoso.com",
           "permissionRequestId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/permissionRequests/{permissionRequestName}"
         },
