--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentGetByInvoiceSection.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentGetByInvoiceSection.json
@@ -12,10 +12,11 @@
         "id": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
         "name": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
         "properties": {
-          "createdOn": "2023-09-11T20:39:07.4436109+00:00",
+          "createdOn": "2023-09-13T03:31:39.61216+00:00",
           "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
           "createdByPrincipalId": "46b831ec-42b2-4f1a-8b54-3fd5ff9d6aa1",
           "principalId": "00000000-0000-0000-0000-000000000000",
+          "roleDefinitionId": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB/invoiceSections/xxxx-xxxx-xxx-xxx/billingRoleDefinitions/50000000-aaaa-bbbb-cccc-100000000000",
           "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/billingProfiles/BKM6-54VH-BG7-PGB/invoiceSections/xxxx-xxxx-xxx-xxx",
           "principalType": "User"
         },
