--- a/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentListByDepartment.json
+++ b/specification/billing/resource-manager/Microsoft.Billing/stable/2023-04-01/examples/billingRoleAssignmentListByDepartment.json
@@ -12,10 +12,11 @@
             "id": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "name": "10000000-aaaa-bbbb-cccc-100000000000_6fd330f6-7d26-4aff-b9cf-7bd699f965b9",
             "properties": {
-              "createdOn": "2023-09-12T16:45:51.3068316+00:00",
+              "createdOn": "2023-09-13T03:31:39.6177193+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
+              "roleDefinitionId": "providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/departments/12345/billingRoleDefinitions/00000000-0000-0000-0000-000000000000",
               "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/departments/12345",
               "principalType": "User"
             },
@@ -25,10 +26,11 @@
             "id": "10000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "name": "10000000-aaaa-bbbb-cccc-100000000000_b1839933-b3ac-42ca-8112-d29c43f3ab47",
             "properties": {
-              "createdOn": "2023-09-12T16:45:51.3068327+00:00",
+              "createdOn": "2023-09-13T03:31:39.61772+00:00",
               "createdByPrincipalTenantId": "076915e7-de10-4323-bb34-a58c904068bb",
               "createdByPrincipalId": "00000000-0000-0000-0000-000000000001",
               "principalId": "00000000-0000-0000-0000-000000000000",
+              "roleDefinitionId": "\"/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/departments/12345/billingRoleDefinitions/00000000-0000-0000-0000-000000000001",
               "scope": "/providers/Microsoft.Billing/billingAccounts/00000000-0000-0000-0000-000000000000:00000000-0000-0000-0000-000000000000_2018-09-30/departments/12345",
               "principalType": "User"
             },
