--- a/specification/loadtestservice/LoadTestService/tspconfig.yaml
+++ b/specification/loadtestservice/LoadTestService/tspconfig.yaml
@@ -14,11 +14,11 @@ emit:
   # Uncomment this line and add "@azure-tools/typespec-ts" to your package.json to generate Typescript code
   # "@azure-tools/typespec-ts": true
 options:
-  # "@azure-tools/typespec-autorest":
-  #   emitter-output-dir: "{project-root}/../"
-  #   output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/contentsafety.json"
-  #   azure-resource-provider-folder: "data-plane"
-  #   examples-directory: ./examples
+  "@azure-tools/typespec-autorest":
+    emitter-output-dir: "{project-root}/../"
+    output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/loadtestservice.json"
+    azure-resource-provider-folder: "data-plane"
+    examples-directory: ./examples
   "@azure-tools/typespec-python":
     package-dir: "azure-developer-loadtesting"
     package-name: "{package-dir}"
