update according to reviewer comment (#14835)
* update according to reviewer comment

---------

Co-authored-by: Rankang Gong <rankanggong@microsoft.com>

---------

Co-authored-by: Rankang Gong <rankanggong@microsoft.com>

---------

Co-authored-by: cobmg <54407936+rankanggong@users.noreply.github.com>
Co-authored-by: Rankang Gong <rankanggong@microsoft.com>

--- a/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
+++ b/specification/testbase/resource-manager/Microsoft.TestBase/preview/2023-08-15-preview/testconfiguration.json
@@ -215,8 +215,8 @@
           "final-state-via": "azure-async-operation"
         },
         "x-ms-examples": {
-          "TestConfigurationPatch": {
-            "$ref": "./examples/TestConfigurationPatch.json"
+          "TestConfigurationUpdate": {
+            "$ref": "./examples/TestConfigurationUpdate.json"
           }
         }
       },
