swagger changes for NF resources
Swagger changes to add capability to pass secrets in CG values/NF and corresponding changes for CGSchema/NF deployParameters

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -375,6 +375,11 @@
         "configurationValue": {
           "type": "string",
           "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string."
+        },
+        "secretConfigurationValue": {
+          "type": "string",
+          "description": "Name and value pairs that define the configuration value. It can be a well formed escaped JSON string.",
+          "x-ms-secret": true
         }
       }
     },
