--- a/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_Create_HA_AvSet.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_Create_HA_AvSet.json
@@ -37,6 +37,7 @@
           "gatewayPort": 3300,
           "icmHttpPort": 3312,
           "icmHttpsPort": 3313,
+          "dispatcherStatus": "Running",
           "loadBalancerDetails": {
             "id": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Network/loadBalancers/cs-loadBalancer"
           },
@@ -92,6 +93,7 @@
           "gatewayPort": 3300,
           "icmHttpPort": 3312,
           "icmHttpsPort": 3313,
+          "dispatcherStatus": "Running",
           "loadBalancerDetails": {
             "id": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Network/loadBalancers/cs-loadBalancer"
           },
