--- a/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_List.json
+++ b/specification/workloads/resource-manager/Microsoft.Workloads/SAPVirtualInstance/preview/2023-10-01-preview/examples/sapapplicationinstances/SAPApplicationServerInstances_List.json
@@ -33,6 +33,7 @@
               "gatewayPort": 3300,
               "icmHttpPort": 3312,
               "icmHttpsPort": 3313,
+              "dispatcherStatus": "Running",
               "vmDetails": [
                 {
                   "virtualMachineId": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Compute/virtualMachines/app01-vm",
@@ -69,6 +70,7 @@
               "gatewayPort": 3300,
               "icmHttpPort": 3312,
               "icmHttpsPort": 3313,
+              "dispatcherStatus": "Running",
               "vmDetails": [
                 {
                   "virtualMachineId": "/subscriptions/6d875e77-e412-4d7d-9af4-8895278b4443/resourceGroups/test-rg/providers/Microsoft.Compute/virtualMachines/app01-vm",
