fix serviceTypeHealthPolicyMap and run prettier

--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetHealth_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionGetHealth_example.json
@@ -5,9 +5,11 @@
     "clusterName": "myCluster",
     "applicationName": "myApp",
     "api-version": "2023-09-01-preview",
-    "parameters": {
-      "upgradeDomainName": "upgradeDomainName"
-    }
+    "eventsHealthStateFilterOptionalQueryParam": 2,
+    "deployedApplicationsHealthStateFilterOptionalQueryParam": 2,
+    "servicesHealthStateFilterOptionalQueryParam": 4,
+    "excludeHealthStatisticsOptionalQueryParam": 2,
+    "timeoutOptionalQueryParam": 4
   },
   "responses": {
     "202": {
