--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionUpdateUpgrade_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionUpdateUpgrade_example.json
@@ -26,16 +26,13 @@
           "maxPercentUnhealthyReplicasPerPartition": 11,
           "maxPercentUnhealthyServices": 12
         },
-        "serviceTypeHealthPolicyMap": [
-          {
-            "key": "VotingWeb",
-            "value": {
-              "maxPercentUnhealthyPartitionsPerService": 13,
-              "maxPercentUnhealthyReplicasPerPartition": 14,
-              "maxPercentUnhealthyServices": 15
-            }
+        "serviceTypeHealthPolicyMap": {
+          "VotingWeb": {
+            "maxPercentUnhealthyPartitionsPerService": 13,
+            "maxPercentUnhealthyReplicasPerPartition": 14,
+            "maxPercentUnhealthyServices": 15
           }
-        ]
+        }
       }
     }
   },
