--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/managedapplication.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/managedapplication.json
@@ -1666,36 +1666,11 @@
       }
     },
     "RuntimeServiceTypeHealthPolicyMap": {
-      "type": "array",
-      "items": {
-        "$ref": "#/definitions/RuntimeServiceTypeHealthPolicyMapItem",
-        "x-ms-identifiers": [
-          "key"
-        ]
-      },
-      "description": "Defines a ServiceTypeHealthPolicy per service type name.\nThe entries in the map replace the default service type health policy for each specified service type. For example, in an application that contains both a stateless gateway service type and a stateful engine service type, the health policies for the stateless and stateful services can be configured differently. With policy per service type, there's more granular control of the health of the service.\nIf no policy is specified for a service type name, the DefaultServiceTypeHealthPolicy is used for evaluation.\n"
-    },
-    "RuntimeServiceTypeHealthPolicyMapItem": {
       "type": "object",
-      "description": "Defines an item in ServiceTypeHealthPolicyMap.\n",
-      "required": [
-        "key",
-        "value"
-      ],
-      "properties": {
-        "key": {
-          "type": "string",
-          "description": "The key of the service type health policy map item. This is the name of the service type."
-        },
-        "value": {
-          "$ref": "#/definitions/RuntimeServiceTypeHealthPolicy"
-        }
-      },
-      "x-sf-documentation": {
-        "value": {
-          "description": "The value of the service type health policy map item. This is the ServiceTypeHealthPolicy for this service type."
-        }
-      }
+      "description": "Defines a ServiceTypeHealthPolicy per service type name.\n\nThe entries in the map replace the default service type health policy for each specified service type.\nFor example, in an application that contains both a stateless gateway service type and a stateful engine service type, the health policies for the stateless and stateful services can be configured differently.\nWith policy per service type, there's more granular control of the health of the service.\n\nIf no policy is specified for a service type name, the DefaultServiceTypeHealthPolicy is used for evaluation.\n"
+    },
+    "additionalProperties": {
+      "$ref": "#/definitions/RuntimeServiceTypeHealthPolicy"
     },
     "RuntimeUpgradeKind": {
       "type": "string",
