--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "azure-rest-api-specs",
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "next",
-    "@azure-tools/typespec-azure-core": "next",
-    "@azure-tools/typespec-azure-resource-manager": "next",
-    "@azure-tools/typespec-client-generator-core": "next",
-    "@azure-tools/typespec-providerhub": "next",
-    "@typespec/compiler": "next",
-    "@typespec/http": "next",
-    "@typespec/lint": "next",
-    "@typespec/openapi": "next",
-    "@typespec/rest": "next",
-    "@typespec/versioning": "next",
+    "@azure-tools/typespec-apiview": "0.4.4",
+    "@azure-tools/typespec-autorest": "0.34.0",
+    "@azure-tools/typespec-azure-core": "0.34.0",
+    "@azure-tools/typespec-azure-resource-manager": "0.34.0",
+    "@azure-tools/typespec-client-generator-core": "0.34.0",
+    "@azure-tools/typespec-providerhub": "0.34.0",
+    "@typespec/compiler": "0.48.0",
+    "@typespec/http": "0.48.0",
+    "@typespec/lint": "0.48.0",
+    "@typespec/openapi": "0.48.0",
+    "@typespec/rest": "0.48.0",
+    "@typespec/versioning": "0.48.0",
     "@azure/avocado": "^0.8.4",
     "azure-rest-api-specs-eng-tools": "file:eng/tools",
     "prettier": "~3.0.3",
