--- a/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionResumeUpgrade_example.json
+++ b/specification/servicefabricmanagedclusters/resource-manager/Microsoft.ServiceFabric/preview/2023-09-01-preview/examples/ApplicationActionResumeUpgrade_example.json
@@ -3,10 +3,10 @@
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "resRg",
     "clusterName": "myCluster",
-    "nodeTypeName": "BE",
+    "applicationName": "myApp",
     "api-version": "2023-09-01-preview",
     "parameters": {
-      "updateType": "ByUpgradeDomain"
+      "upgradeDomainName": "upgradeDomainName"
     }
   },
   "responses": {
