--- a/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json
+++ b/specification/app/resource-manager/Microsoft.App/preview/2023-08-01-preview/examples/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json
@@ -38,6 +38,16 @@
         "scopes": [
           "container-app-1",
           "container-app-2"
+        ],
+        "serviceComponentBind": [
+          {
+            "name": "statestore",
+            "serviceId": "/subscriptions/9f7371f1-b593-4c3c-84e2-9167806ad358/resourceGroups/ca-syn2-group/providers/Microsoft.App/containerapps/cappredis",
+            "metadata": {
+              "name": "daprcomponentBind",
+              "value": "redis-bind"
+            }
+          }
         ]
       }
     }
@@ -79,6 +89,16 @@
           "scopes": [
             "container-app-1",
             "container-app-2"
+          ],
+          "serviceComponentBind": [
+            {
+              "name": "statestore",
+              "serviceId": "/subscriptions/9f7371f1-b593-4c3c-84e2-9167806ad358/resourceGroups/ca-syn2-group/providers/Microsoft.App/containerapps/cappredis",
+              "metadata": {
+                "name": "daprcomponentBind",
+                "value": "redis-bind"
+              }
+            }
           ]
         }
       }
