Update namespace for dotnet and javascript to the approved namespace

--- a/specification/riskiq/Easm/tspconfig.yaml
+++ b/specification/riskiq/Easm/tspconfig.yaml
@@ -10,7 +10,7 @@ options:
     examples-directory: "examples"
     output-file: "{azure-resource-provider-folder}/Microsoft.Easm/preview/2023-03-01-preview/easm.json"
   "@azure-tools/typespec-csharp":
-    package-dir: "Azure.Defender.Easm"
+    package-dir: "Azure.Analytics.Defender.Easm"
     namespace: "{package-dir}"
     clear-output-folder: true
     model-namespace: false
@@ -20,5 +20,5 @@ options:
       name: "@azure-rest/defender-easm-rest"
   "@azure-tools/typespec-java":
     package-dir: "azure-defender-easm"
-    namespace: com.azure.defender.easm
+    namespace: com.azure.analytics.defender.easm
   
