Update package directory for java sdk from azure-defender-easm to azure-analytics-defender-easm

--- a/specification/riskiq/Easm/tspconfig.yaml
+++ b/specification/riskiq/Easm/tspconfig.yaml
@@ -19,6 +19,6 @@ options:
     packageDetails:
       name: "@azure-rest/defender-easm-rest"
   "@azure-tools/typespec-java":
-    package-dir: "azure-defender-easm"
+    package-dir: "azure-analytics-defender-easm"
     namespace: com.azure.analytics.defender.easm
   
